added possible fix for CORS error sometimes seen in browser console, see https://humanwhocodes.com/blog/2010/05/25/cross-domain-ajax-with-cross-origin-resource-sharing/. Only works in Github webpage https://dineshjnarayan.github.io - 07012022:1751

--- a/amp_ccpa_gdpr_combined.html
+++ b/amp_ccpa_gdpr_combined.html
@@ -12,6 +12,31 @@
         <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     </head>
     <body>
+
+        <script>
+            function createCORSRequest(method, url){
+                var xhr = new XMLHttpRequest();
+                if ("withCredentials" in xhr){
+                    xhr.open(method, url, true);
+                } else if (typeof XDomainRequest != "undefined"){
+                    xhr = new XDomainRequest();
+                    xhr.open(method, url);
+                } else {
+                    xhr = null;
+                }
+                return xhr;
+            }
+            
+            var request = createCORSRequest("get", "https://dineshjnarayan.github.io");
+            if (request){
+                request.onload = function(){
+                    //do something with request.responseText
+                    console.log("request response text value is " + request.responseText)
+                };
+                request.send();
+            }
+        </script>
+
         <h1>Welcome to the mobile web CCPA TCF 09092021</h1>
         <!-- include amp analytics component -->
         <amp-analytics data-block-on-consent="_till_accepted" type="googleanalytics">
