small correction to privacy manager code - 07012022:1954

--- a/amp_ccpa_gdpr_combined.html
+++ b/amp_ccpa_gdpr_combined.html
@@ -83,9 +83,9 @@
                 }
             </script>
         </amp-consent>
-        <!-- <div id="ccpa-consent-ui">
+        <div id="ccpa-consent-ui">
             <button on="tap:consent.prompt(consent=SourcePoint)">Do Not Sell My Info</button>
-        </div> -->
+        </div>
         <div id="eea-consent-ui">
             <button on="tap:consent.prompt(consent=SourcePoint)">Privacy Settings</button>
         </div>
